maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:10: error: illegal start of statement
    )
    ^IslandMaze:15: error: ')' expected but '}' found.
  }}
  ^